* Fixed: GameConfigure players table was too big for portrait.

--- a/MobileClient/www/Assets/MenuScreen.css
+++ b/MobileClient/www/Assets/MenuScreen.css
@@ -156,7 +156,7 @@
 
 #SkirmishGameConfigurePlayers
 {
-	width: 400px;
+	width: 300px;
 	margin: auto;
 	border-collapse: collapse;
 }
